# obsidian-ops

./: .tmuxp.yaml  AGENTS.md  CHANGELOG.md  README.md  devenv.nix  devenv.yaml  pyproject.toml
.scratch/projects/00-kiln-overview/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  HOW_KILN_WORKS.md  ISSUES.md  KILN_INTEGRATION_REVIEW.md  KILN_OVERVIEW.md  PLAN.md  PROGRESS.md
.scratch/projects/01-obsidian-ops-concept/: ASSUMPTIONS.md  CANONICAL_DIRECTION_SIMPLIFIED_OBSIDIAN_OPS.md  CONCEPT_REVIEW.md  CONTEXT.md  DECISIONS.md  PLAN.md  PROGRESS.md  SIMPLIFIED_OBSIDIAN_OPS_ARCHITECTURE.md  SIMPLIFIED_OBSIDIAN_OPS_CONCEPT.md  SIMPLIFIED_OBSIDIAN_OPS_IMPLEMENTATION_GUIDE.md  SIMPLIFIED_OBSIDIAN_OPS_README.md  SIMPLIFIED_OBSIDIAN_OPS_SPEC_JUJUTSU.md
.scratch/projects/02-documentation-rewrite/: ARCHITECTURE.md  CONCEPT.md  SPEC.md
.scratch/projects/03-implementation-guide/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  IMPLEMENTATION_GUIDE.md  PLAN.md  PROGRESS.md
.scratch/projects/04-library-implementation/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/05-devenv-kiln-install/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/06-demo-scaffold/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/07-clean-url-routing/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/08-code-review/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md  REVIEW_REFACTOR_GUIDE.md
.scratch/projects/09-vllm-backend-integration/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/10-architecture-refactor/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  FORGE_IMPLEMENTATION_GUIDE.md  ISSUES.md  OBSIDIAN_AGENT_IMPLEMENTATION_GUIDE.md  Obsidian-Ops_rev0_overview.md  PLAN.md  PROGRESS.md  REFACTORING_CONCEPT.md  REFACTORING_CONCEPT_SIMPLIFICATION.md  (+2 more)
demo/obsidian-ops/: README.md  run_demo.sh
scripts/: live_vault_demo.py
src/obsidian_ops/: __init__.py  __main__.py  agent.py  anchors.py  app.py  config.py  content.py  demo_cli.py  errors.py  frontmatter.py  fs_atomic.py  history_jj.py  inject.py  lock.py  locks.py  models.py  page_context.py  queue.py  rebuild.py  sandbox.py  search.py  server.py  structure.py  templates.py  tools.py  vault.py  vcs.py
tests/: conftest.py  test_anchors.py  test_api.py  test_config.py  test_content.py  test_demo_cli.py  test_frontmatter.py  test_fs_atomic.py  test_history_jj.py  test_inject.py  test_integration.py  test_lock.py  test_locks.py  test_page_context.py  test_queue.py  test_sandbox.py  test_search.py  test_server.py  test_smoke.py  test_structure.py  test_templates.py  test_vault.py  test_vcs.py
(+126 files in other folders)
