[project]
name = "obsidian-ops"
version = "0.1.0"
description = "Local-first operations overlay for an Obsidian vault."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.0.0",
  "typer>=0.12.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "openai>=1.60.0",
  "httpx>=0.28.0",
]

[project.scripts]
ops-demo = "obsidian_ops.demo_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.24.0",
  "ty>=0.0.1",
  "ruff>=0.5.0",
]

#[project.urls]
#homepage = "https://github.com/Bullish-Design/obsidian-ops"
#repository = "https://github.com/Bullish-Design/obsidian-ops.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_ops"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
  "tests",
  "pyproject.toml",
]

[tool.uv]

[tool.pytest.ini_options]
addopts = "-q --cov=obsidian_ops --cov-report=term-missing"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unresolved-import = "warn"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
